2007-06-14  Ethan Glasser-Camp  <ethan.glasser.camp@gmail.com>

	* heightfielddata.pyx: bug fix from Dan Miller
	* Reverted weakref patch -- it causes some kind of strange
	  bug. I'll look into it later.

2007-06-05  Matthias Baas <mbaas@users.sourceforge.net>

	* Applied a couple of patches posted by Ethan Glasser-Camp to the 
	  mailing list (doc strings for GeomRay, __delattr__ on
	  GeomObject, UniversalJoint angle updates, storing
	  Geoms with weak references, triangle count)
	* Added the heightfield patch as well

2006-11-28  Matthias Baas <mbaas@users.sourceforge.net>

	* setup.py: Modified the setup script to upgrade to ODE 0.7.
	
2006-11-10  Matthias Baas <mbaas@users.sourceforge.net>

	* joints.pyx, geoms.pyx: Applied some more patches by 
	  Ethan Glasser-Camp (switched from the ccylinder functions to
	  the capsule functions and renamed the GeomCCylinder to GeomCapsule.
	  For backwards compatibility, the name GeomCCylinder is still
	  available and is an alias for GeomCapsule. Added support for
	  GeomCylinder (the uncapped one)).

2006-11-09  Matthias Baas <mbaas@users.sourceforge.net>

	* joints.pyx: Applied a patch from the mailing list that adds support
	  for the LMotor (thanks to Ethan Glasser-Camp).
	* joints.pyx: Applied a patch from the mailing list that adds support
	  for the Plane2DJoint (thanks to Leonard Ritter).

	These changes requires a more recent version of ODE than 0.5 
	(I've switched to v0.7 now).

2006-08-15  Matthias Baas <mbaas@users.sourceforge.net>

	* joints.pyx: The JointGroup.__dealloc__() method now notifies
	  the contained joints about the destruction of the ODE joints
	  (i.e. _destroyed() is called).

2006-05-30  Matthias Baas <mbaas@users.sourceforge.net>

	* mass.pyx: Applied Chris Bainbridge's patch that adds the 
	  Mass.setBoxTotal() method, and while I was at it I added
	  the other set*Total() methods, too.

2006-04-13  Matthias Baas <mbaas@users.sourceforge.net>
